--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1"
   }
 }
